butterfly: Core, wathc coordinatefile, not file